# mangaba_ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.json  pyproject.toml  relatorio_analise_20250605_103328.txt  requirements.txt  setup.py
docs/api/: README.md
docs/guides/: quickstart.md
examples/: README.md  basic_usage.py  code_review.py  market_analysis.py  peticao_automatica.txt  simple_example.py  slack_analysis_example.py  test_advanced_case.py  test_config.py  test_full_legal_pipeline.py  test_simple_env.py
examples/advanced/: multi_agent_analysis.py
examples/basic/: hello_world.py
mangaba_ai/: main.py
mangaba_ai/cases/: slack_analyzer.py
mangaba_ai/config/: setup.py
mangaba_ai/core/: agent.py  mcp.py  models.py
mangaba_ai/schemas/: analysis.py  message.py
src/integrations/slack/: __init__.py  agent_example.py  example_usage.py  mangaba_channel_analysis.py  mangaba_channel_analyzer.py  requirements.txt  run_analysis.ps1  run_tests.ps1  setup_env.bat  setup_env.ps1  setup_env.sh  slack_agent_handler.py  slack_channel_analyzer.py  test_slack.py
src/integrations/slack/tests/: run_tests.ps1  test_slack_integration.py
src/mangaba_ai/: __init__.py
src/mangaba_ai/core/: models.py  protocols.py
src/mangaba_ai/tools/: __init__.py
tests/: run_tests.py  test_mangaba_api.py  test_slack_api.py
